--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   /* Generics */
   body {
     font-family: sans-serif;
-    padding-top: 150px;
+    padding-top: 130px;
   }
   
   /* Utils */
@@ -37,7 +37,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 5;
   }
 
   main{
@@ -104,23 +104,10 @@
   .column{
     flex-basis: calc(100% / 3);
     min-height: 400px;
-    margin-bottom: 3px;
   }
 
   .card{
     position: relative;
-  }
-
-  .under-column{
-    background-color: var(--green);
-    flex-basis: calc(100% / 3);
-  }
-
-  .under-row{
-    display: flex;
-    gap: 30px;
-    height: 50px;
-    margin-bottom: 50px;
   }
 
   .card > img{
@@ -133,6 +120,44 @@
     position: relative;
     left:0;
     bottom: 60px;
+  }
+
+  .card::after{
+    content: '\2665';
+    background: var(--white);
+    font-size: 15px;
+    padding: 1px 6px;
+    border-right-color: var(--white);
+    position: absolute;
+    top: 5px;
+    right: 0;
+  }
+
+  .img-description{
+    position: relative;
+    bottom: 20px;
+  }
+
+  .brand{
+    font-size: 15px;
+  }  
+
+  .name-product{
+    font-weight: bold;
+  }
+
+  .discount-price{
+    color: var(--red);
+    font-weight: bold;
+  }
+
+  .real-price{
+    text-decoration: line-through;
+  }
+
+  #card-empty{
+    position: relative;
+    bottom: 0px;
   }
 
   /* Footer */
