--- a/style.css
+++ b/style.css
@@ -161,24 +161,43 @@
   }
 
   /* Footer */
+
+  .footer-company h3{
+    padding: 10px 0;
+  }
+
+  .footer-company li{
+    padding: 5px 0;
+    padding-right: 10px;
+  }
+
   .footer-information{
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-basis: 100%;
     gap: 10px;
   }
 
   .footer-company{
-    background-color: yellowgreen;
     height: 100px;
     flex-basis: 50%;
+    padding: 10px 0;
   }
 
   .footer-social{
-    background-color: brown;
     height: 100px;
     flex-basis: 50%;
+    padding: 15px 0;
     text-align: right;
+  }
+
+  .footer-social > h4{
+    margin-right: 15px;
+    margin-bottom: 5px;
+  }
+
+  .social-icons > i{
+    font-size: 25px;
+    padding: 5px;
+    padding-right: 0;
   }
 
